force-app/main/default/objects/Partner_Deal__c/Partner_Deal__c.object-meta.xml
<CustomObject>
    <label>Partner Deal</label>
    <nameField>
        <label>Partner Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>