force-app/main/default/objects/Partner_Deal__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>SLA / audit</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>